feat: nits